# nexo-rs-plugin-admin

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  plugin.toml
.github/workflows/: ci.yml  release.yml
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx
frontend/src/api/: admin.ts  agents.ts  audit.ts  bots.ts  channels.ts  chat_meta.ts  client.ts  compose.ts  composeAttachments.ts  composeDrafts.ts  emailTemplates.ts  firehose.ts  llm_keys.ts  marketing.ts  marketingState.ts  mcp_servers.ts  memory.ts  onboarding.ts  pairing.ts  persona.ts  plugin_discovery.ts  plugin_doctor.ts  plugin_restart.ts  plugin_uninstall.ts  sentEmails.ts  settings.ts  skills.ts  spamFilter.ts  tenants.ts  types.gen.ts  types.ts  voice_mode.ts  workspace.ts
frontend/src/components/: CmdK.tsx  RichTextEditor.tsx  RotateTokenButton.tsx  ToastHost.tsx
frontend/src/components/plugin-ui/: ActionBar.tsx  FieldInput.tsx  GenericScreen.tsx
frontend/src/components/ui/: Avatar.tsx  Badge.tsx  (+32 more)
frontend/src/data/: locales.ts
frontend/src/i18n/: index.ts  store.ts  types.ts
frontend/src/init/: chatMetaBoot.ts
frontend/src/lib/: cmdk.ts  confirmPrefix.ts  contactLabel.ts  fuzzyRank.ts  llmCatalog.ts  maskApiKey.ts  notify.ts  notifySound.ts  oauthFlow.ts  searchMatch.ts  useDialogClose.ts  visibleWhenDsl.ts
frontend/src/pages/: Login.tsx  Wizard.tsx
frontend/src/shell/: ContextPanel.tsx  ModuleErrorBoundary.tsx  ModuleRegistry.ts  PluginModulePage.tsx  Rail.tsx  SecondarySidebar.tsx  ShellRoot.tsx  TenantSwitcher.tsx  i18n.ts  localStorage.ts  pluginContributionModules.tsx  registryInstance.ts  types.ts  usePersistedWidth.ts  useShellContext.ts  useTenant.ts  useUrlState.ts  useViewport.ts
frontend/src/store/: audit.ts  auth.ts  bootstrap.ts  channels.ts  cmdk.ts  conversations.ts  dashboard.ts  firehose.ts  labels.ts  llm_keys.ts  marketingConfig.ts  marketingLeads.ts  marketingPersons.ts  marketingStateStore.ts  mcp_servers.ts  memory.ts  mutes.ts  pluginContributions.ts  plugins.ts  prospects.ts  skills.ts  soundPref.ts  tenant.ts  toast.ts  wizard.ts
frontend/src/styles/: index.css
frontend/tests/: i18n-drift.test.ts  setup.ts
frontend/tests/api/: agent-binding-reconcile.test.ts  agent-seller-bind.test.ts  http-error.test.ts  marketing-draft-generate.test.ts  marketing-draft-template.test.ts  marketing-drafts-inbox.test.ts  marketing-drafts.test.ts  marketing-engagement.test.ts  marketing-persons.test.ts  marketing-telemetry.test.ts  marketing-transition.test.ts
frontend/tests/components/: ai-draft-card.test.tsx  audit-summary.test.ts  drafts-inbox-view.test.tsx  duplicate-merge-prompt.test.ts  engagement-badge.test.tsx  enrichment-card.test.tsx  followup-override.test.tsx  followup-profile-editor.test.tsx  guardrail-compile-error.test.ts  health-view.test.tsx  heartbeat-field.test.tsx  installed-list-toggle.test.tsx  lead-timeline.test.tsx  mailbox-form-editor.test.tsx  marketing-wizard.test.tsx  next-step-hint.test.tsx  notification-templates-editor.test.tsx  operator-notes.test.tsx  partial-failure-banner.test.tsx  plugin-card.test.tsx  plugin-generic-screen.test.tsx  plugins-main.test.tsx  plugins-tabs.test.tsx  restart-plugin-modal.test.tsx  routing-rule-editor.test.tsx  score-explainer.test.tsx  seller-draft-template.test.tsx  seller-vacation.test.tsx  snippet-editor.test.tsx  state-machine.test.tsx  template-editor.test.tsx  ui-primitives.test.tsx  uninstall-plugin-modal.test.tsx
frontend/tests/lib/: confirm-prefix.test.ts  visibleWhenDsl.test.ts
frontend/tests/modules/: plugins-settings.test.tsx
frontend/tests/shell/: ModuleErrorBoundary.test.tsx  ModuleRegistry.test.ts  Rail.test.tsx  TenantSwitcher.test.tsx  localStorage.test.ts  pluginContributionModules.test.tsx  tenant-store.test.ts  useUrlState.test.tsx
frontend/tests/store/: marketing-config.test.ts  marketing-leads.test.ts  memory-tenant.test.ts  pluginContributions.test.ts  tenant-cache-reset.test.ts
src/: auth.rs  main.rs
src/firehose/: mod.rs  routes.rs
src/http/: assets.rs  auth_token.rs  bootstrap.rs  healthz.rs  login.rs  mod.rs
src/onboarding/: bootstrap.rs  mod.rs  routes.rs
src/tunnel/: cloudflared.rs  mod.rs  none.rs  tailscale.rs
tests/: handshake_smoke.rs  http_smoke.rs
(+129 files in other folders)
